--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,17 +9,18 @@ edition = "2018"
 clap = "2.33"
 colored = "1.8"
 crossterm = "0.10"
+fs_extra = "1.1"
 hashbrown = "0.5"
 md5 = "0.6"
-fs_extra = "1.1"
 pbo = {git = "https://github.com/synixebrett/pbo-rs", branch = "master"}
 question = "0.2"
+rayon = "*"
 rust-crypto = "0.2"
+self_update = "*"
 serde_derive = "1.0"
 serde_json = "1.0"
 serde= "1.0"
 walkdir = "*"
-rayon = "*"
 
 [target.'cfg(windows)'.dependencies]
 ansi_term = "0.12"
