--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,13 @@
 
 dist: trusty
 language: rust
-services: docker
 sudo: required
-
-# TODO Rust builds on stable by default, this can be
-# overridden on a case by case basis down below.
 
 env:
   global:
-    # TODO Update this to match the name of your project.
-    - CRATE_NAME=trust
+    - CRATE_NAME=smoothly
 
 matrix:
-  # TODO These are all the build jobs. Adjust as necessary. Comment out what you
-  # don't need
   include:
 
     # Linux
